--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0; 
+  padding: 0;
 }
 
 html {
@@ -9,14 +11,18 @@ html {
 h1 {
   font-size: 3rem;
 }
+
 .grid {
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
   display: flex;
   flex-wrap: wrap;
-  gap: 0.5em;
+  gap: 0.1em;
+  border: 2px solid black;
+  background-color: lightgrey;
+  flex: 0 0 32em;
 }
 
-.tile {
+.fill {
   flex-wrap: wrap;
   background-color: black;
 }
