--- a/styles/style.css
+++ b/styles/style.css
@@ -26,13 +26,16 @@ p, input {
 
 input {
   width: 100px;
-  height: auto;
+  height: 35px;
+  border-radius: 5px;
   text-align: center;
 }
 
 .container {
+  display: flex;
+  align-items: center;
+  flex: 0;
   height: 100vh;
-  margin-top: 1em;
 }
 
 .wrapper {
@@ -83,14 +86,13 @@ input {
 button {
   font-size: 1.6rem;
   padding: 0.75em;
-  /* margin: 0.5em; */
   color: #fff;
   border-radius: 3px;
   border: none;
 }
 
 button:hover {
-  opacity: 0.6;
+  opacity: 0.9;
   cursor: pointer;
 }
 
